<resources>
    <string name="app_name">LR_Cook</string>

    <string name="fio">Казунина Софья Т-403901 ИСиТ</string>
    <string name="change_lang">Выбрать язык</string>
    <string name="name">Кулинарные рецепты</string>
    <string name="eat1">Завтрак</string>
    <string name="eat2">Обед</string>
    <string name="eat3">Ужин</string>

    <string name="lang_ru">Русский</string>
    <string name="lang_en">Английский</string>
    <string name="lang_fr">Французский</string>


    <string name="btn_next">Далее</string>

    <string name="breakfest1_name">ЯИЧНИЦА НА СКОВОРОДЕ</string>
    <string name="breakfest2_name">ГРЕНКИ ИЗ БАТОНА С ЯЙЦОМ</string>
    <string name="breakfest3_name">МАННАЯ КАША НА МОЛОКЕ</string>

    <string name="boiling">До кипения каши</string>

    <string name="breakfest3_ingrid">Молоко-300мл\nМанка-3стол.л.\nСахар-1стол.л.\nСоль-по вкусу\nСливочное масло-40гр</string>
    <string name="breakfest1_ingrid">Яйца-1 шт.\nСливочное масло-10гр \n Соль-по вкусу\n Перец острый молотый-по вкусу</string>
    <string name="breakfest2_ingrid">Белый хлеб-300гр\n Яйца-1шт. \n Молоко-50мл\n Сливочное масло-40гр\n Соль-по вкусу</string>

    <string name="breakfest1_cooking">
    1. Подготовьте необходимые ингредиенты. Яйцо помойте с мылом под струёй тёплой воды. Это необходимо для обеспечения безопасности и защиты от возможного заражения сальмонеллой.\n
    2. Сковородку с невысокими бортами разогрейте на сильном огне. Добавьте кусочек сливочного масла и растопите его до жидкого состояния. Огонь убавьте до среднего.\n
    3. Вбейте яйцо в сковороду с раскалённым маслом. Постарайтесь не повредить целостность желтка. Круговыми движениями распределите белок так, чтобы он равномерно растёкся по сковороде.\n
    4. Жарьте яичницу до такого состояния, пока белок полностью не схватится, а желток ещё будет ярко-жёлтым и жидким.\n
    5. После того, как яичница достигла необходимой степени готовности, можно слегка посолить и поперчить её по вкусу.
    </string>

    <string name="breakfest2_cooking">
    1. Подготовьте продукты по списку. Подготовьте глубокую широкую миску и сковороду для жарки.\n
    2. В глубокой миске взбейте слегка яйцо, добавьте соль или сахар, если делаете сладкие гренки. Влейте молоко и всё перемешайте.\n
    3. Окуните каждый ломтик хлеба в смесь так, чтобы он хорошо пропитался.\n
    4. Сковороду поставьте на средний огнь, выложите на неё сливочное масло и дождитесь, пока оно не растопится полностью.\n
    5. Выложите на разогретую с маслом сковороду ломтики хлеба в яичной смеси и жарьте до образования жёлто-золотистой корочки сначала с одной стороны, затем, аккуратно перевернув, с другой стороны.\n
    6. Готовые гренки из батона с яйцом и молоком подавайте сразу. Это самостоятельное блюдо.
    </string>

    <string name="breakfest3_cooking">
    1. Для приготовления манной каши подготовьте все ингредиенты. Молоко для каши можно использовать любой жирности.\n
    2. Для варки каши удобно использовать алюминиевую посуду или кастрюлю с толстым дном. Налейте в ковш необходимое количество молока.\n
    3. Добавьте в молоко ложку сахара и щепотку соли.\n
    4. Затем добавьте в холодное молоко манную крупу. Перемешайте и поставьте ковш на огонь. Если любите кашу более жидкую, то достаточно будет всего 2-х ложек крупы.\n
    5. При постоянном помешивании доведите все до кипения. При закипании каша постепенно станет густая. Проварите её, буквально, 20-30 секунд и снимите с огня. Только не переставайте перемешивать кашу, иначе получите один большой комок. Постоять и дождаться закипания 1-2 минуты совсем не сложно.\n
    6. Готовую кашу перелейте в подготовленную тарелку, добавьте небольшое количество сливочного масла или свежих ягод.
    </string>

    <string name="breakfest1_time">15 мин</string>
    <string name="breakfest2_time">15 мин</string>
    <string name="breakfest3_time">10 мин</string>

    <string name="ingridients">Ингридиенты</string>
    <string name="cooking">Приготовление</string>
    <string name="timer">Таймер</string>
    <string name="start">Старт</string>

    <string name="lunch1_name">ГОРОШНИЦА</string>
    <string name="lunch1_ingrid">Горох-1.5стак.\nВода-4.5стак.\nСоль-1чайн.л.\n\</string>
    <string name="lunch1_cooking">
        1. Подготовьте продукты. Воды понадобится в пропорции 1:3 - на одну часть гороха три части воды.\n
        2. Прежде всего горох хорошо промойте под проточной прохладной водой. Смените воду несколько раз, чтобы хорошо вымылась вся грязь и пыль. Налейте в горох всю воду и отправляйте на плиту.\n
        3. Сделайте средний огонь и доведите горох до кипения. Не отходите в это время от плиты, поднимется высокая пена, которая может убежать и испачкать плиту. Убавьте огонь и снимите пену ложкой. Добавьте соль.\n
        4. Оставьте горох вариться на самом маленьком огне. Изредка перемешивайте его, проверяя уровень воды. Постепенно горошины начнут размягчаться, а каша - густеть.\n
        5. С этого момента следите за ней внимательней. Горох имеет свойство пригорать, если оставить его без достаточного количества жидкости. Попробуйте кашу, если зерна еще твердые, а вода уже вся выкипела, то добавьте еще немного.\n
        6. Снимите кастрюлю с горохом с огня. Подавайте горошницу сразу на стол. В остывшем виде она становится очень густой.
    </string>
    <string name="lunch1_name_timer">Варка гороха</string>
    <string name="lunch1_time">1 ч</string>


    <string name="dinner1_name">САЛАТ С КОПЧЕНОЙ ГРУДКОЙ И КОРЕЙСКОЙ МОРКОВЬЮ</string>
    <string name="dinner1_ingrid">Копченая курица-200гр
Кукуруза консервированая-200гр
Яйца-3шт.
Корейская морковь-150гр
Твёрдый сыр-50гр
Майонез-70гр
</string>
    <string name="dinner1_cooking">"        1. Подготовьте ингредиенты. Яйца заранее отварите в кипящей воде в течение 7-9 минут. Затем горячую воду с них слейте и остудите яйца в холодной воде. Баночку с кукурузой откройте и слейте с неё жидкость.\n\n        2. Копченую куриную грудку нарежьте мелкими кубиками.\n\n        3. Салат будем выкладывать слоями в кольцо. Выложите нарезанную копченую курицу первым слоем и немного прижмите, чтобы слой был более плотный. Смажьте курочку небольшим количеством майонеза.\n\n        4. Корейскую морковь нарежьте чуть мельче, чем она есть. Мелкими кусочками она будет гармоничнее смотреться в салате.\n\n        5. Нарезанную морковь выложите следующим слоем салата и смажьте майонезом.\n\n        6. Третьим слоем выложите сыр, натертый на средней или мелкой терке. Его так же промажьте майонезом.\n\n        7. Отварные яйца очистите от скорлупы, натрите на терке и выложите в кольцо поверх сырного слоя. И еще немного майонеза.\n\n        8. Верхним слоем выложите консервированную кукурузу. Немного прижмите все слои, чтобы салат был более плотный и не развалился. Снимите с салата кольцо. Вкусный салат с копченой курочкой и корейской морковью готов! Немного охладите его перед подачей к столу!\n\n    "</string>
    <string name="dinner1_time">40 мин</string>
    <string name="eggs">Варить яйца</string>

</resources>