<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_lang"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_id_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_ru" />

        <Button
            android:id="@+id/button_id_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_en" />

        <Button
            android:id="@+id/button_id_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_fr" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>